# FlexAIDdS

./: .gitignore  CITATION.cff  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FREENRG_INTEGRATION.md  IMPLEMENTATION_GUIDE.md  PRODUCT.md  README.md  SECURITY.md  SECURITY_AUDIT_BUFFER_OVERFLOW.md  THIRD_PARTY_LICENSES.md  VERSION.md  app.js  dataset_runner.py  dataset_runner_pro.py  index.html  prune_stale_branches.sh  style.css
.github/: dependabot.yml  pull_request_template.md
LIB/: AtomSoA.h  BenchmarkRunner.h  BindingMode.cpp  BindingMode.h  BindingResidues.h  CMakeLists.txt  CifReader.cpp  CifReader.h  CleftDetector.cpp  CleftDetector.h  CoarseScreen.cpp  CoarseScreen.h  DatasetRunner.cpp  DatasetRunner.h  DensityPeak_Cluster.cpp  DistributedBackend.h  FOPTICS.cpp  FOPTICS.h  FastOPTICS_cluster.cpp  GAContext.cpp  GAContext.h  GISTEvaluator.cpp  GISTEvaluator.h  GISTGrid.h  GPUContextPool.h  GrandPartitionFunction.cpp  GrandPartitionFunction.h  GridDecomposer.cpp  GridDecomposer.h  HARDWARE_DISPATCH_PLAN.md  HBondEvaluator.cpp  HBondEvaluator.h  HardwareDispatch.cpp  HardwareDispatch.h  LibrarySplitter.cpp  LibrarySplitter.h  MIFGrid.h  MPIBackend.h  MPIMergeable.h  MPITransport.cpp  (+155 more)
LIB/CavityDetect/: CavityDetect.cpp  CavityDetect.h  CavityDetect.metal  CavityDetectMetalBridge.h  CavityDetectMetalBridge.mm  SpatialGrid.h
LIB/ChiralCenter/: ChiralCenterGene.cpp  ChiralCenterGene.h
LIB/LigandRingFlex/: LigandRingFlex.cpp  LigandRingFlex.h  RingConformerLibrary.cpp  RingConformerLibrary.h  SugarPucker.cpp  SugarPucker.h
LIB/NATURaL/: NATURaLDualAssembly.cpp  NATURaLDualAssembly.h  NucleationDetector.cpp  NucleationDetector.h  RibosomeElongation.cpp  RibosomeElongation.h  TransloconInsertion.cpp  TransloconInsertion.h  disco_natural.hpp
LIB/PTMAttachment/: PTMAttachment.cpp  PTMAttachment.h
LIB/ProcessLigand/: Aromaticity.cpp  Aromaticity.h  BonMol.h  CoordBuilder.cpp  CoordBuilder.h  FlexAIDWriter.cpp  FlexAIDWriter.h  ProcessLigand.cpp  ProcessLigand.h  ROCmDispatch.cpp  ROCmDispatch.h  RingPerception.cpp  RingPerception.h  RotatableBonds.cpp  RotatableBonds.h  SmilesParser.cpp  SmilesParser.h  SybylTyper.cpp  SybylTyper.h  ValenceChecker.cpp  ValenceChecker.h  hip_eval.hip  main.cpp
LIB/ShannonThermoStack/: ShannonMetalBridge.h  ShannonMetalBridge.mm  ShannonThermoStack.cpp  ShannonThermoStack.h  shannon_cuda.cu  shannon_metal.metal
LIB/tENCoM/: benchmark_tencom.cpp  pdb_calpha.h  tencm.cpp  tencm.h  tencm_cpu_fallback.cpp  tencm_cpu_fallback.h  tencm_cuda.cu  tencm_cuda.cuh  tencm_metal.h  tencom_diff.cpp  tencom_diff.h  tencom_entropy_diff.cpp  tencom_main.cpp
benchmarks/: DatasetRunner.py  README.md  __init__.py  __main__.py  ligand_prep.py  metrics.py  run.py  run_distributed_validation.sh  run_modern.py  run_nextgen.py  run_unified.py
cmake/: CMakeLists_rocm_patch.cmake  MetalAcceleration.cmake
docs/: BENCHMARKS.md  BONHOMME_FLEET_ENHANCEMENTS.md  CODEBASE_OPTIMIZATION_ANALYSIS.md  EXPERIMENTAL_CAPABILITIES.md  EXPERIMENTAL_FLEXMOLVIEW.md  FLEXAIDS_ROADMAP_AND_STRATEGY.md  GrandPartitionFunction_Report.md  IMPLEMENTATION_ROADMAP.md  INSTALLATION.md  KNOWN_LIMITATIONS.md  PHASE1_SUMMARY_AND_DELIVERABLES.md  REMAINING_WORK_AUDIT.md  REPRODUCIBILITY.md  SUPPORT_MATRIX.md  TEST_COVERAGE_ANALYSIS.md  USERGUIDE.md  VALIDATED_CAPABILITIES.md  WINDOWS_BUILD_ROADMAP.md  mkdocs.yml  test-coverage-analysis.md
pymol_plugin/: __init__.py  entropy_heatmap.py  gui.py  interactive_docking.py  itc_comparison.py  mode_animation.py  results_adapter.py  visualization.py
python/: CMakeLists.txt  README.md  conftest.py  pyproject.toml  setup.py
python/bindings/: bindings_matrix.cpp  core_bindings.cpp
python/flexaidds/: __init__.py  __main__.py  __version__.py  _core.cpp  _fallback_types.py  benchmark.py  boltz2.py  continuous_training.py  dataset_adapters.py  docking.py  encom.py  energy_matrix.py  energy_matrix_cli.py  flexmolview.py  io.py  ml_rescore.py  models.py  optimize.py  results.py  supercluster.py  tencm.py  tencom_results.py  thermodynamics.py  train_256x256.py  updater.py  visualization.py
python/flexaidds/dataset_runner/: __init__.py  __main__.py  cli.py  runner.py
python/flexaidds/dataset_runner/datasets/: casf2016.yaml  dude37.yaml  erds_specificity.yaml  itc187.yaml  muv.yaml  psychopharm23.yaml
python/tests/: __init__.py  conftest.py  test_benchmark.py  test_benchmark_parallel.py  test_boltz2.py  test_cli.py  test_continuous_training.py  test_dataset_runner.py  test_dataset_runner_pro.py  test_docking.py  test_encom.py  test_energy_matrix.py  test_flexmolview.py  test_gil_release.py  test_import_fallback.py  test_io.py  test_ml_rescore.py  test_models.py  test_models_deserialization.py  test_optimize.py  test_pdb_io.py  test_phase3_features.py  test_py_statmech.py  test_results.py  test_results_io.py  test_results_loader_models.py  test_statmech.py  test_statmech_smoke.py  test_supercluster.py  test_tencm.py  test_tencom_results.py  test_thermodynamics.py  test_thermodynamics_dataclass.py  test_train_256x256.py  test_updater.py  test_version.py  test_visualization.py
scripts/: check_cmake_deps.py  check_licenses.py  run_distributed_validation.sh  update_site_stats.py
site/: app.js  index.html  style.css
src/: gaboom.cpp
swift/: Package.swift
tests/: stubs.cpp  test_binding_mode_advanced.cpp  test_binding_mode_statmech.cpp  test_binding_mode_vibrational.cpp  test_binding_residues.cpp  test_cavity_detect.cpp  test_ccbm.cpp  test_chiral_center.cpp  test_cleft_cavity.cpp  test_coarse_screen.cpp  test_compare_energy_matrices.cpp  test_cube_grid.cpp  test_dataset_runner.cpp  test_distributed_backend.cpp  test_docking_pipeline.cpp  test_encom.cpp  test_entropy_ga.cpp  test_fast_optics.cpp  test_formal_charges.cpp  test_ga_context.cpp  test_ga_core.cpp  test_ga_diversity.cpp  test_ga_validation.cpp  test_gaboom.cpp  test_gist_grid.cpp  test_gist_hbond.cpp  test_grand_partition.cpp  test_hardware_detect_dispatch.cpp  test_hardware_dispatch.cpp  (+28 more)
typescript/wasm/: CMakeLists.txt  bindings.cpp
(+203 files in other folders)
