[build-system]
requires = ["setuptools>=64", "wheel", "pybind11>=2.10"]
build-backend = "setuptools.build_meta"

[project]
name = "flexaidds"
version = "2.0.0"
description = "Python bindings for the FlexAID∆S thermodynamic core"
authors = [
  { name = "Louis-Philippe Morency" },
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]
benchmarks = ["numpy>=2.0.2", "pyyaml>=6.0.3"]
benchmarks-mpi = ["numpy>=2.0.2", "pyyaml>=6.0.3", "mpi4py>=3.0"]

[project.scripts]
flexaidds-benchmark = "flexaidds.dataset_runner.cli:main"

[project.urls]
Homepage = "https://github.com/lmorency/FlexAIDdS"

[tool.setuptools.packages.find]
where = ["."]
include = ["flexaidds*"]

[tool.setuptools.package-data]
"flexaidds.dataset_runner" = ["datasets/*.yaml"]

[tool.setuptools.package-dir]
"" = "."
